@@ -1,12 +1,13 @@
 Linux
 =====
 
-Zebedee is developed and tested on Mandrake 8.1. It should build easily on
+Zebedee is developed and tested on Mandrake 8.2. It should build easily on
 other Linux distributions too although older versions (RedHat 5 I believe) may
 have problems with one or more of the pthread library functions being missing.
 Compile without HAVE_PTHREADS defined if this appears to be a problem.
 
-You may build with system-supplied zlib and bzip2 libraries if you have them.
+You may build with system-supplied zlib, bzip2 and OpenSSL (for Blowfish)
+libraries if you have them.
 
 Zebedee:
 
